src/fixtures/errors/error-expr.lua
error("unknown error")
return true
